--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -38,109 +38,41 @@
 }
 
 body {
-  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
 }
-/* Nav Bar */
+
 .header {
-  width: 100vw;
-  height: 10vh;
+  background-color: tomato;
   display: flex;
-  flex-wrap: wrap;
+  width: 100%;
+  height: 10%;
+  padding-top: 2.5%;
+  flex-direction: row;
+  position: fixed;
 }
 
-.copyright {
-  position: fixed;
-
+.header > h4, nav {
   display: flex;
-  height: 5vh;
-  width: 50vw;
-  align-items: center;
-  text-align: center;
+  width: 50%;
   justify-content: center;
 }
 
-.nav {
-  position: fixed;
-
-  align-items: center;
-  text-align: center;
-  display: flex;
-  height: 10vh;
-  width: 49vw;
+nav {
+  padding-top: 1%;
   justify-content: space-between;
-  padding-right: 5vw;
-  padding-left: 45vw;
+  align-content: center;
+  padding-right: 1%;
+}
+
+li {
+  list-style: none;
 }
 
 .Welcome {
-  padding-top: 10vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding-left: 25vw;
-  padding-right: 25vw;
-}
-
-.projects { 
-  padding-top: 10vh;
-  width: 50vw;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding-left: 25vw;
-  padding-right: 25vw;
-}
-
-.project1 {
-  width: 50vw;
-  height: 50vh;
+  padding-top: 10%;
   display: flex;
   flex-direction: column;
-  padding-bottom: 10vh;
-  margin-bottom: 1vh;
-}
-
-.project1 > img {
-  width: 50vw;
-  padding-bottom: 10vh;
-
-}
-
-.project2 {
-  margin-top: 1vh;
-  width: 50vw;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 10vh;
-  margin-bottom: 1vh;
-}
-
-.project2 > img {
-  width: 50vw;
-  height: 90%;
-}
-
-.project3 {
-  margin-top: 1vh;
-  width: 50vw;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 10vh;
-}
-
-.project3 > img {
-  width: 50vw;
-}
-
-.project3 > p {
-  padding-bottom: 5vh;
+  width: 75%;
+  padding-left: 12.5%;
 }
