--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -73,6 +73,21 @@ li {
   padding-top: 10%;
   display: flex;
   flex-direction: column;
-  width: 75%;
-  padding-left: 12.5%;
+  width: 50%;
+  padding-left: 25%;
+  align-items: center;
+}
+
+.Welcome > h1 {
+  font-size: 3em;
+}
+
+.Welcome > h3 {
+  font-size: 2em;
+}
+
+.Welcome > p {
+  font-size: 1.5em;
+  flex-flow: wrap;
+  display: flex;
 }
