--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -38,12 +38,16 @@
 }
 
 body {
+  background-image: url("./images/background.jpg"); 
   width: 100%;
   height: 100%;
 }
 
 .header {
-  background-color: tomato;
+  background-image: url('./images/bg-nav-bar-e1522125676147.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   display: flex;
   width: 100%;
   height: 10%;
@@ -125,8 +129,17 @@ li {
   font-size: 2em;
 }
 
-.project3 > img {
+.each-slide {
   width: 100%;
+}
+
+
+#slideshow > div { 
+  position: absolute; 
+  top: 10px; 
+  left: 10px; 
+  right: 10px; 
+  bottom: 10px; 
 }
 
 /* add media query for phones */
