--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 body {
   background-image: url("./images/1b456377a9dce67a7dc3630260aa7572.gif");
+  background-repeat: no-repeat;
   height: 110vh;
   width: 100vw;
   flex-direction: row;
@@ -88,24 +51,25 @@ nav > li > a:visited {
 .Welcome {
   padding-top: 20vh;
   width: 100vw;
-  height: 90vh;
+  height: 85vh;
   text-align: center;
   color: hotpink;
   text-shadow: 2px 2px black;
-
+  padding-bottom: 2.5vh;
 }
 
 .Welcome > p {
   padding-left: 12.5vw;
   width: 75vw;
   padding-right: 12.5vw;
+  
 }
 
 .Welcome > img {
-  width: 75vw;
-  height: 75vh;
-  padding-left: 12.5vw;
-  padding-right: 12.5vw;
+  width: 50vw;
+  height: 50vh;
+  padding-left: 25vw;
+  padding-right: 25vw;
 }
 
 .Welcome > p > a:visited {
@@ -121,6 +85,183 @@ nav > li > a:visited {
     flex-wrap: wrap;
   }
   .Welcome > img {
-    height: 60vh;
+    height: 30vh;
   }
+  .Welcome > p {
+    padding-left: 5vw;
+    width: 85vw;
+    font-size: small;
+  }
+}
+
+.projects {
+  padding-top: 20vh;
+  height: 320vh;
+  background-image: url("./images/wp2736652.gif");
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat-y;
+  text-align: center;
+  color: hotpink;
+  text-shadow: 2px 2px black;
+  width: 100vw;
+}
+
+.projects > .project1 {
+  height: 100vh;
+  width: 100vw;
+}
+
+.projects > .project1 > p {
+  padding-left: 12.5vw;
+  width: 75vw;
+}
+
+.projects > .project1 > p > a:link {
+  color: white;
+}
+
+.projects > .project1 > p > a:visited {
+  color: white;
+}
+
+.projects > .project1 > img {
+  height: 70vh;
+  width: 50vw;
+  padding-left: 25vw;
+  padding-right: 25vw;
+  padding-bottom: 2.5vh;
+}
+
+.projects > .project2 {
+  height: 100vh;
+  width: 100vw;
+}
+
+.projects > .project2 > p {
+  padding-left: 12.5vw;
+  padding-right: 12.5vw;
+  width: 75vw;
+}
+
+.projects > .project2 > p > a:link {
+  color: white;
+}
+
+.projects > .project2 > p > a:visited {
+  color: white;
+}
+
+.projects > .project2 > img {
+  height: 70vh;
+  width: 50vw;
+  padding-left: 25vw;
+  padding-right: 25vw;
+  padding-bottom: 2.5vh;
+}
+
+.projects > .project3 {
+  height: 100vh;
+  width: 100vw;
+}
+
+.projects > .project3 > p {
+  padding-left: 12.5vw;
+  padding-right: 12.5vw;
+  width: 75vw;
+}
+
+.projects > .project3 > p > a:link {
+  color: white;
+}
+
+.projects > .project3 > p > a:visited {
+  color: white;
+}
+
+#slideshow > img {
+  height: 40vh;
+  width: 75vw;
+  padding-left: 12.5vw;
+  padding-right: 12.5vw;
+}
+
+@media only screen and (max-width: 360px) and (max-height: 640px) {
+  .projects {
+    height: 500vh;
+  }
+
+  .projects > .project1{
+    height: 135vh;
+  }
+
+  .projects > .project1 > img {
+    padding-left: 10vw;
+    width: 80vw;
+    padding-right: 10vw;
+  }
+
+  .projects > .project2 {
+    height: 135vh;
+  }
+
+  .projects > .project2 > img {
+    padding-left: 12.5vw;
+    width: 75vw;
+    padding-right: 12.5vw;
+
+  }
+
+  .projects > .project3 {
+    height: 135vh;
+  }
+
+  .projects > .project3 > #slideshow > img {
+    padding-left: 12.5vw;
+    width: 75vw;
+    padding-right: 12.5vw;
+
+  }
+
+
+}
+
+@media only screen and (min-width: 768px) {
+
+  .projects {
+    height: 330vh;
+  }
+
+  .projects > .project3 > #slideshow > img {
+    padding-left: 12.5vw;
+    width: 75vw;
+    padding-right: 12.5vw;
+
+  }
+
+  .projects > .project1{
+    height: 100vh;
+  }
+
+  .projects > .project1 > img {
+    padding-left: 10vw;
+    width: 80vw;
+    padding-right: 10vw;
+  }
+
+  .projects > .project2 {
+    height: 100vh;
+  }
+
+  .projects > .project2 > img {
+    padding-left: 12.5vw;
+    width: 75vw;
+    padding-right: 12.5vw;
+
+  }
+
+  .projects > .project3 {
+    height: 100vh;
+  }
+
 }
